# Hutrol

./: .gitignore  CONTRIBUTING.md  README.md  hutrol.spec  index.html  phases.md  plan.md  progress.md  pyproject.toml  sample.env
scripts/: build_installer.iss
src/human/: __init__.py
src/human/cli/: main.py
src/human/compliance/: __init__.py  approval_tracker.py  audit_logger.py  export_siem.py  policy_engine.py
src/human/config/: loader.py
src/human/evals/: goldens.jsonl  run_evals.py
src/human/mcp/: broker.py
src/human/memory/: sqlite_store.py
src/human/observability/: tracing.py
src/human/orchestrator/: context.py  harness.py  state_machine.py  subagent.py  types.py
src/human/providers/: base.py  ollama_provider.py  openrouter_provider.py
src/human/safety/: approval_gate.py  risk_classifier.py
src/human/skills/: loader.py
src/human/tools/: __init__.py  agent_ops.py  config_ops.py  file_ops.py  registry.py  system_ops.py
website/: index.html
