[project]
name = "hutrol-human"
version = "0.1.0"
description = "Agentic CLI harness"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "typer>=0.12.0",
    "pydantic>=2.0.0",
    "openai>=1.0.0",
    "python-dotenv>=1.0.1",
    "pyyaml>=6.0.1",
    "rich>=13.0.0",
    "requests>=2.34.2",
]

[project.scripts]
hutrol = "human.cli.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/human"]

[dependency-groups]
dev = [
    "pyinstaller>=6.21.0",
]
